src/libqgraphicsscene.bf

	[LinkName("QGraphicsScene_FocusInEvent")]
	public static extern void QGraphicsScene_FocusInEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsScene_FocusOutEvent")]
	public static extern void QGraphicsScene_FocusOutEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsScene_HelpEvent")]
	public static extern void QGraphicsScene_HelpEvent(void* c_this, QGraphicsSceneHelpEvent event);
	[LinkName("QGraphicsScene_KeyPressEvent")]
	public static extern void QGraphicsScene_KeyPressEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsScene_KeyReleaseEvent")]
	public static extern void QGraphicsScene_KeyReleaseEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsScene_MousePressEvent")]
	public static extern void QGraphicsScene_MousePressEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsScene_MouseMoveEvent")]
	public static extern void QGraphicsScene_MouseMoveEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsScene_MouseReleaseEvent")]
	public static extern void QGraphicsScene_MouseReleaseEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsScene_MouseDoubleClickEvent")]
	public static extern void QGraphicsScene_MouseDoubleClickEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsScene_WheelEvent")]
	public static extern void QGraphicsScene_WheelEvent(void* c_this, QGraphicsSceneWheelEvent event);
	[LinkName("QGraphicsScene_InputMethodEvent")]
	public static extern void QGraphicsScene_InputMethodEvent(void* c_this, QInputMethodEvent event);
	[LinkName("QGraphicsScene_DrawBackground")]
	public static extern void QGraphicsScene_DrawBackground(void* c_this, QPainter painter, QRectF rect);
	[LinkName("QGraphicsScene_DrawForeground")]
	public static extern void QGraphicsScene_DrawForeground(void* c_this, QPainter painter, QRectF rect);
	[LinkName("QGraphicsScene_FocusNextPrevChild")]
	public static extern bool QGraphicsScene_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QGraphicsScene_Changed")]
	public static extern void QGraphicsScene_Changed(void* c_this, QRectF[] region);
	[LinkName("QGraphicsScene_SceneRectChanged")]
	public static extern void QGraphicsScene_SceneRectChanged(void* c_this, QRectF rect);
	[LinkName("QGraphicsScene_SelectionChanged")]
	public static extern void QGraphicsScene_SelectionChanged(void* c_this);
	[LinkName("QGraphicsScene_FocusItemChanged")]
	public static extern void QGraphicsScene_FocusItemChanged(void* c_this, QGraphicsItem newFocus, QGraphicsItem oldFocus, int64 reason);
	[LinkName("QGraphicsScene_Tr2")]
	public static extern char8[] QGraphicsScene_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsScene_Tr3")]
	public static extern char8[] QGraphicsScene_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsScene_Render2")]
	public static extern void QGraphicsScene_Render2(void* c_this, QPainter painter, QRectF target);
	[LinkName("QGraphicsScene_Render3")]
	public static extern void QGraphicsScene_Render3(void* c_this, QPainter painter, QRectF target, QRectF source);
	[LinkName("QGraphicsScene_Render4")]
	public static extern void QGraphicsScene_Render4(void* c_this, QPainter painter, QRectF target, QRectF source, int64 aspectRatioMode);
	[LinkName("QGraphicsScene_Items1")]
	public static extern QGraphicsItem[] QGraphicsScene_Items1(void* c_this, int64 order);
	[LinkName("QGraphicsScene_Items22")]
	public static extern QGraphicsItem[] QGraphicsScene_Items22(void* c_this, QPointF pos, int64 mode);
	[LinkName("QGraphicsScene_Items3")]
	public static extern QGraphicsItem[] QGraphicsScene_Items3(void* c_this, QPointF pos, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items4")]
	public static extern QGraphicsItem[] QGraphicsScene_Items4(void* c_this, QPointF pos, int64 mode, int64 order, QTransform deviceTransform);
	[LinkName("QGraphicsScene_Items23")]
	public static extern QGraphicsItem[] QGraphicsScene_Items23(void* c_this, QRectF rect, int64 mode);
	[LinkName("QGraphicsScene_Items32")]
	public static extern QGraphicsItem[] QGraphicsScene_Items32(void* c_this, QRectF rect, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items42")]
	public static extern QGraphicsItem[] QGraphicsScene_Items42(void* c_this, QRectF rect, int64 mode, int64 order, QTransform deviceTransform);
	[LinkName("QGraphicsScene_Items25")]
	public static extern QGraphicsItem[] QGraphicsScene_Items25(void* c_this, QPainterPath path, int64 mode);
	[LinkName("QGraphicsScene_Items34")]
	public static extern QGraphicsItem[] QGraphicsScene_Items34(void* c_this, QPainterPath path, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items44")]
	public static extern QGraphicsItem[] QGraphicsScene_Items44(void* c_this, QPainterPath path, int64 mode, int64 order, QTransform deviceTransform);
	[LinkName("QGraphicsScene_Items7")]
	public static extern QGraphicsItem[] QGraphicsScene_Items7(void* c_this, double x, double y, double w, double h, int64 mode, int64 order, QTransform deviceTransform);
	[LinkName("QGraphicsScene_CollidingItems2")]
	public static extern QGraphicsItem[] QGraphicsScene_CollidingItems2(void* c_this, QGraphicsItem item, int64 mode);
	[LinkName("QGraphicsScene_SetSelectionArea2")]
	public static extern void QGraphicsScene_SetSelectionArea2(void* c_this, QPainterPath path, int64 selectionOperation);
	[LinkName("QGraphicsScene_SetSelectionArea3")]
	public static extern void QGraphicsScene_SetSelectionArea3(void* c_this, QPainterPath path, int64 selectionOperation, int64 mode);
	[LinkName("QGraphicsScene_SetSelectionArea4")]
	public static extern void QGraphicsScene_SetSelectionArea4(void* c_this, QPainterPath path, int64 selectionOperation, int64 mode, QTransform deviceTransform);
	[LinkName("QGraphicsScene_AddEllipse22")]
	public static extern QGraphicsEllipseItem QGraphicsScene_AddEllipse22(void* c_this, QRectF rect, QPen pen);
	[LinkName("QGraphicsScene_AddEllipse3")]
	public static extern QGraphicsEllipseItem QGraphicsScene_AddEllipse3(void* c_this, QRectF rect, QPen pen, QBrush brush);
	[LinkName("QGraphicsScene_AddLine22")]
	public static extern QGraphicsLineItem QGraphicsScene_AddLine22(void* c_this, QLineF line, QPen pen);
	[LinkName("QGraphicsScene_AddPath2")]
	public static extern QGraphicsPathItem QGraphicsScene_AddPath2(void* c_this, QPainterPath path, QPen pen);
	[LinkName("QGraphicsScene_AddPath3")]
	public static extern QGraphicsPathItem QGraphicsScene_AddPath3(void* c_this, QPainterPath path, QPen pen, QBrush brush);
	[LinkName("QGraphicsScene_AddRect22")]
	public static extern QGraphicsRectItem QGraphicsScene_AddRect22(void* c_this, QRectF rect, QPen pen);
	[LinkName("QGraphicsScene_AddRect3")]
	public static extern QGraphicsRectItem QGraphicsScene_AddRect3(void* c_this, QRectF rect, QPen pen, QBrush brush);
	[LinkName("QGraphicsScene_AddText2")]
	public static extern QGraphicsTextItem QGraphicsScene_AddText2(void* c_this, char8[] text, QFont font);
	[LinkName("QGraphicsScene_AddSimpleText2")]
	public static extern QGraphicsSimpleTextItem QGraphicsScene_AddSimpleText2(void* c_this, char8[] text, QFont font);
	[LinkName("QGraphicsScene_AddWidget2")]
	public static extern QGraphicsProxyWidget QGraphicsScene_AddWidget2(void* c_this, QWidget widget, int64 wFlags);
	[LinkName("QGraphicsScene_AddEllipse5")]
	public static extern QGraphicsEllipseItem QGraphicsScene_AddEllipse5(void* c_this, double x, double y, double w, double h, QPen pen);
	[LinkName("QGraphicsScene_AddEllipse6")]
	public static extern QGraphicsEllipseItem QGraphicsScene_AddEllipse6(void* c_this, double x, double y, double w, double h, QPen pen, QBrush brush);
	[LinkName("QGraphicsScene_AddLine5")]
	public static extern QGraphicsLineItem QGraphicsScene_AddLine5(void* c_this, double x1, double y1, double x2, double y2, QPen pen);
	[LinkName("QGraphicsScene_AddRect5")]
	public static extern QGraphicsRectItem QGraphicsScene_AddRect5(void* c_this, double x, double y, double w, double h, QPen pen);
	[LinkName("QGraphicsScene_AddRect6")]
	public static extern QGraphicsRectItem QGraphicsScene_AddRect6(void* c_this, double x, double y, double w, double h, QPen pen, QBrush brush);
	[LinkName("QGraphicsScene_SetFocusItem2")]
	public static extern void QGraphicsScene_SetFocusItem2(void* c_this, QGraphicsItem item, int64 focusReason);
	[LinkName("QGraphicsScene_SetFocus1")]
	public static extern void QGraphicsScene_SetFocus1(void* c_this, int64 focusReason);
	[LinkName("QGraphicsScene_Invalidate5")]
	public static extern void QGraphicsScene_Invalidate5(void* c_this, double x, double y, double w, double h, int64 layers);
	[LinkName("QGraphicsScene_Update1")]
	public static extern void QGraphicsScene_Update1(void* c_this, QRectF rect);
	[LinkName("QGraphicsScene_Invalidate1")]
	public static extern void QGraphicsScene_Invalidate1(void* c_this, QRectF rect);
	[LinkName("QGraphicsScene_Invalidate22")]
	public static extern void QGraphicsScene_Invalidate22(void* c_this, QRectF rect, int64 layers);
}